Here I added the form.html page.

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/main.css">
         <script src="js/vendor/modernizr-2.8.3.min.js"></script>
+        <!--<p>Login <a href=""></a></p>-->
     </head>
     <body>
 
