Here I added the form.html page.

--- a/form.html
+++ b/form.html
@@ -154,7 +154,7 @@
     <p><br />The Final Frontier &copy; 2017 &nbsp;&nbsp;&nbsp;</p>
 </footer>
 </div></div>
-<script src="form.js"></script>
+<script src="js/form.js"></script>
 
 </body>
 </html>
