Changes to index and added a known issue file folder
The known issue file folder is for screenshots.

--- a/index.html
+++ b/index.html
@@ -7,17 +7,22 @@
         <link rel="icon" href="img/browsericon.jpg">
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-
         <link rel="apple-touch-icon" href="apple-touch-icon.png">
         <!-- Place favicon.ico in the root directory -->
-
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/main.css">
         <script src="js/vendor/modernizr-2.8.3.min.js"></script>
-        <!--<p>Login <a href=""></a></p>-->
+
     </head>
     <body>
-
+    <div class="loginwrap">
+        <nav>
+            <br>
+            <button class="button" type="button" ><a href="login.html" ><span>Log In</span></a></button>
+            <button class="button" type="button" ><a href="newaccount.html" ><span>New Account</span></a></button>
+            <br>
+        </nav>
+    </div>
         <!--[if lt IE 8]>
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
@@ -57,3 +62,5 @@
         </p>
     </footer>
 </html>
+
+
