I added files and removed some but these should be in working form

--- a/index.html
+++ b/index.html
@@ -12,14 +12,13 @@
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/main.css">
         <script src="js/vendor/modernizr-2.8.3.min.js"></script>
-
     </head>
     <body>
     <div class="loginwrap">
         <nav>
             <br>
-            <button class="button" type="button" ><a href="login.html" ><span>Log In</span></a></button>
-            <button class="button" type="button" ><a href="newaccount.html" ><span>New Account</span></a></button>
+            <button class="button" type="button" ><a href="login.html" ><span>Log<br />In</span></a></button>
+            <button class="button" type="button" ><a href="newaccount.html" ><span>New<br />Account</span></a></button>
             <br>
         </nav>
     </div>
@@ -28,6 +27,14 @@
         <![endif]-->
 
         <!-- Add your site or application content here -->
+        <br>
+        <br>
+        <br>
+        <br>
+    <br>
+    <br>
+    <br>
+    <br>
         <h1>Welcome to Stately Supply Co.</h1>
         <p><a href="http://instagram.com/statelysupplyco" target="_blank"><img src="img/StatelyAlpha.png" alt="Picture of Stately Supply Co. Banner"></a>
         <P>Click/Tap the icons or pictures to follow us.</P>
@@ -61,6 +68,7 @@
             </a>
         </p>
     </footer>
+    <script src="js/index.js"></script>
 </html>
 
 
