--- a/login.html
+++ b/login.html
@@ -23,7 +23,6 @@
 <br>
 <br>
 <br>
-
 <p></p>
 <p></p>
 <div id="loginwrap">
@@ -34,13 +33,12 @@
         <label id="label_j_password" for="j_password">Password:</label>
         <input id="input_j_password" name="j_password" type="password" class="inputbox" />
         <br />
-        <input id="input_submit_login" type="submit" value="Login" />
+        <input class="button" id="input_submit_login" type="submit" value="Log In" />
     </form>
 </div>
-
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
 <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.8.2.min.js"><\/script>')</script>
 <script src="js/plugins.js"></script>
-<script src="js/main.js"></script>
+<script src="js/form.js"></script>
 </body>
 </html>
