--- a/newaccount.html
+++ b/newaccount.html
@@ -29,95 +29,14 @@
     <div class="bottom-wrapper">
         <div id="body">
             <div id="main">
-                <form method="post" id ="myform" action="confirm.html" name="myform" onsubmit="return validateForm()">
-                    <fieldset><legend>Please Enter Customer Information</legend>
-                        <table>
-                            <tr>
-                                <th>
-                                    <label for="firstname">First Name</label>
-                                </th>
-                                <td>
-                                    <input type="text" id="firstname" name="firstname" size="15" />
-                                </td>
 
-                                <th>
-                                    <label for="middleinitial">Middle Initial</label>
-                                </th>
-                                <td>
-                                    <input type="text" id="middleinitial" name="middleinitial" size="1" maxlength="1" />
-                                </td>
-                            </tr>
-                            <tr>
-                                <th>
-                                    <label for="lastname">Last Name</label>
-                                </th>
-                                <td>
-                                    <input type="text" id="lastname" name="lastname" size="15" />
-                                </td>
-                            </tr>
-                            <tr>
-                                <th>
-                                    <label for="email">Email Address</label>
-                                </th>
-                                <td>
-                                    <input type="email" id="email" name="email" size="25" />
-                                </td>
-                            </tr>
-                            <tr>
-                                <th>
-                                    <label for="pass">Password</label>
-                                </th>
-                                <td>
-                                    <input type="password" id="pass" name="pass" size="25" />
-                                </td>
-                            </tr>
-                            <tr>
-                                <th>
-                                    <label for="cpass">Confirm Password</label>
-                                </th>
-                                <td>
-                                    <input type="password" id="cpass" name="cpass" size="25" />
-                                </td>
-                            </tr>
-                            <tr>
-                                <th>
-                                    <label for="sadd">Shipping Street Address</label>
-                                </th>
-                                <td>
-                                    <input type="text" id="sadd" name="sadd" size="25"/>
-                                </td>
-                            </tr>
-                            <tr>
-                                <th>
-                                    <label for="city">City</label>
-                                </th>
-                                <td>
-                                    <input type="text" id="city" name="city" size="25"/>
-                                </td>
-                            </tr>
-                            <tr>
-                                <th>
-                                    <label for="zipcode">Zipcode</label>
-                                </th>
-                                <td>
-                                    <input type="text" id="zipcode" name="zipcode" size="10"/>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td>
-                                 <button class="button" type="submit" id="submit" name="submit">Submit</button>
-                                </td>
-                            </tr>
-                        </table>
-                    </fieldset>
-                </form>
-                <iframe src="http://localhost:63342/StatelySupplyCo/tomcat9/webapps/webserv1/index.html?_ijt=lu56m4c2nt3bug90mc4j0k9cnu"</iframe>
+                <iframe src="http://localhost:63342/StatelySupplyCo/tomcat9/webapps/webserv1/login.html" scrolling="no"></iframe>
             </div>
         </div>
     </div>
     <div id="footer">
         <footer>
-            <p><br />The Final Frontier &copy; 2017 &nbsp;&nbsp;&nbsp;</p>
+            <p><br />Griffin Studios &copy; 2017 &nbsp;&nbsp;&nbsp;</p>
         </footer>
     </div></div>
 <script src="js/form.js"></script>
