--- a/tomcat9/webapps/webserv1/index.html
+++ b/tomcat9/webapps/webserv1/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>Nathan's Ingredients-Smarter DB access</title>
+<title>Nathan's People-Smarter DB access</title>
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js">
 </script>
 <script>
